unpackaged/objects/Keyword_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <label>Case Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <label>Case Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <label>Case Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Queue_Name__c</fullName>
        <label>Routing_Queue_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Email__c</fullName>
        <label>Support_Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Keyword Config</label>
    <pluralLabel>Keyword Configs</pluralLabel>
</CustomObject>